--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".Activities.DashBoard"
             android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.More_detail"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
