update 2nd version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,15 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
+    <permission
+        android:name="com.chrajeshkumar.nearby.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-feature android:name="android.hardware.location.gps" />
-    <permission
-        android:name="com.javapapers.currentlocationinmap.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature" />
-
+    <uses-feature android:name="android.hardware.location.gps"/>
+    <uses-permission android:name="com.chrajeshkumar.nearby.permission.MAPS_RECEIVE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo"
@@ -32,7 +33,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyCe_v1AHYm2beflIjMBZ9VYEpXFX8g3thk" />
 
         <activity
             android:name=".Activities.Splash_Screen"
