--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-feature android:name="android.hardware.location.gps"/>
     <uses-permission android:name="com.chrajeshkumar.nearby.permission.MAPS_RECEIVE"/>
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
